[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/BG_DesertMountains/Sunny Cloud Background.png" type="Texture" id=1]
[ext_resource path="res://OtherAssets/hasanfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Options.gd" type="Script" id=3]

[node name="MarginContainer" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 649, 266 )
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 505.0
margin_top = 323.0
margin_right = 774.0
margin_bottom = 397.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 269.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 65.0
margin_bottom = 20.0
rect_min_size = Vector2( 65, 0 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "SFX  "

[node name="SfxSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 269.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
max_value = 1.0
step = 0.1
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 269.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 65.0
margin_bottom = 20.0
rect_min_size = Vector2( 65, 0 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Music"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 69.0
margin_right = 269.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
max_value = 1.0
step = 0.1
value = 1.0

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 269.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 2 )
text = "Back"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer/SfxSlider" to="." method="_on_SfxSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/HBoxContainer2/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
